--- a/src/Tetris.cls
+++ b/src/Tetris.cls
@@ -9,6 +9,11 @@ Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = False
 Option Explicit
 '=============================================================================80
+' Tetris
+' Author: Yi-Ping Huang
+' https://github.com/yipinghuang1991/VBA-Tetris
+'=============================================================================80
+'=============================================================================80
 ' Windows API
 '=============================================================================80
 #If VBA7 Then
